# CheatNG

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
cmake/toolchains/: android.cmake  switch.cmake
gui/: gui_imgui.cpp  gui_imgui.hpp  main_android_imgui.cpp  main_imgui.cpp
gui/i18n/: i18n.hpp
lib/: base.cpp  base.hpp  factory.hpp  mem.hpp  mem_utils.hpp  native.hpp  proc.hpp  remote.hpp  rpc.cpp  rpc.hpp  rpc_tunnel.hpp
lib/imp/linux/: mem.cpp  mem_usermode_proc.cpp  mem_usermode_proc.hpp  proc.cpp  proc_usermode_proc.cpp  proc_usermode_proc.hpp
main/: gui_imgui.cpp  gui_imgui.hpp  main_imgui.cpp
main/i18n/: i18n.hpp
main/views/: mem_view.cpp  mem_view.hpp
server/: server.cpp
